content/static: widen download button to avoid wrapping
This change sets the width style rule for download buttons
so that label text in the button won't wrap excessively.
This should make it a little easier to read.

Fixes golang/go#41856

Reviewed-on: https://go-review.googlesource.com/c/website/+/260917
TryBot-Result: Go Bot <gobot@golang.org>
Trust: Steve Traut <straut@google.com>

--- a/content/static/style.css
+++ b/content/static/style.css
@@ -348,7 +348,7 @@ a#start .desc {
   margin-top: 0.3125rem;
 }
 .download {
-  width: 9.375rem;
+  width: 17.5rem;
 }
 ::-webkit-input-placeholder {
   color: #7f7f7f;
